# ecom-ops-agent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DAILY_SCHEDULE.md  Dockerfile  PROGRESS.md  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
.github/ISSUE_TEMPLATE/: experiment.md
data/: defect_ledger.json  eval_cases.json  eval_timeline.json  l2_judge_fixtures.json  orders.json  products.json  profiles.json  retrieval_eval.json
data/faq/: corpus.json  退换货政策.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  hooks.ts  theme.css
scripts/: smoke_lllm.py
src/: agent.py  api.py  audit.py  config.py  dashboard.py  eval_answer_runner.py  eval_compare.py  eval_judge.py  eval_l2_fixtures.py  eval_l2_judge.py  eval_retrieval.py  experiment_kb.py  l2_annotations.py  l2_dashboard.py  observe_retrieval.py  profile.py
src/contracts/: __init__.py  export_schemas.py  l2_fixtures.py
src/dashboard/: experiment_adapter.py  main.py
src/eval/: answer_runner.py  compare.py  judge.py  reconcile.py  rerank_benchmark.py  retrieval.py
src/experiment/: compare.py  kb.py  runner.py
src/schemas/: analyze_ops_schema.py  escalate_to_human_schema.py  kb_search_schema.py  query_order_schema.py  recommend_product_schema.py
src/tools/: analyze_ops.py  escalate_to_human.py  kb_search.py  query_order.py  recommend_product.py
static/: dashboard.html  index.html  l2-dashboard.html
tests/: test_contract_schemas.py  test_experiment_dashboard.py  test_l2_dashboard.py  test_l2_fixtures_dashboard.py
(+22 files in other folders)
