[project]
name = "ecom-ops-agent"
version = "0.1.0"
description = "私域电商运营 Agent 工作台"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.9",
    "openai",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
