[project]
name = "ecom-ops-agent"
version = "0.1.0"
description = "私域电商运营 Agent 工作台"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "uvicorn>=0.49",
    "openai",
    "pydantic>=2",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
